name:                hdis86
version:             0.1
license:             BSD3
license-file:        LICENSE
synopsis:            Interface to the udis86 disassembler for x86 / AMD64
category:            FIXME
author:              Keegan McAllister <mcallister.keegan@gmail.com>
maintainer:          Keegan McAllister <mcallister.keegan@gmail.com>
homepage:            FIXME
build-type:          Simple
cabal-version:       >=1.2
description:
  FIXME
extra-source-files:
    examples/fixme.hs

library
  exposed-modules:  
      Hdis86.Opcode
    , Hdis86.Map
    , Hdis86.C
    , Hdis86.Types
    , Hdis86.IO
    , Hdis86.Pure
    , Hdis86
  ghc-options:       -Wall
  build-depends:
      base       >= 3 && < 5
    , containers >= 0.3
    , bytestring >= 0.9
  extra-libraries: udis86
