name:                hdis86
version:             0.1
license:             BSD3
license-file:        LICENSE
synopsis:            Interface to the udis86 disassembler for x86 / AMD64
category:            FIXME
author:              Keegan McAllister <mcallister.keegan@gmail.com>
maintainer:          Keegan McAllister <mcallister.keegan@gmail.com>
homepage:            FIXME
build-type:          Simple
cabal-version:       >=1.2
description:
  FIXME
extra-source-files:
    tools/hdcli.hs
  , tools/gen_opcode.sh

flag builtin-udis86
  default: True
  description: Compile and link a bundled copy of udis86 as part of hdis86.

library
  exposed-modules:  
      Hdis86
    , Hdis86.Types
    , Hdis86.Pure
    , Hdis86.IO
    , Hdis86.C
    , Hdis86.Internal.Opcode
    , Hdis86.Internal.Map
  ghc-options:       -Wall
  build-depends:
      base       >= 3 && < 5
    , containers >= 0.3
    , bytestring >= 0.9

  if flag(builtin-udis86)
    include-dirs: udis86-1.7
    c-sources:
      udis86-1.7/libudis86/decode.c
      udis86-1.7/libudis86/syn-att.c
      udis86-1.7/libudis86/udis86.c
      udis86-1.7/libudis86/input.c
      udis86-1.7/libudis86/syn.c
      udis86-1.7/libudis86/itab.c
      udis86-1.7/libudis86/syn-intel.c
  else
    extra-libraries: udis86
